add input validation rules

--- a/config/log.yml
+++ b/config/log.yml
@@ -1,5 +1,9 @@
 - name: log
   type: instant
+  inputValidator:
+    - target: firstMessage
+      handlers:
+        - matchPattern: 'message'
   stepBlock:
     - identifier: firstMessageLogger
       properties:
